fix a couple of issue with fishbone skin: missing colour spec in alternate stylesheets, bogus tooltips info in status pane cover art
git-svn-id: file:///home/awy/mirror/slim/trunk/server@4798 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/HTML/Fishbone/slimserver_gray.css
+++ b/HTML/Fishbone/slimserver_gray.css
@@ -269,6 +269,7 @@ DIV.menu2 .stdedit {
 .listing, .listing2, .even, .odd
 {
 	font-family: Verdana, Arial, Helvetica, sans-serif;
+	background: #222222;
 	color:#999;
 	padding-left: 1px;
 	margin-top:1px;
